--- a/boardWeb/pom.xml
+++ b/boardWeb/pom.xml
@@ -48,6 +48,17 @@
 		    <artifactId>logback-classic</artifactId>
 		    <version>1.5.6</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.taglibs</groupId>
+		    <artifactId>taglibs-standard-spec</artifactId>
+		    <version>1.2.5</version>
+	    </dependency>
+	    <dependency>
+		   <groupId>org.apache.taglibs</groupId>
+		   <artifactId>taglibs-standard-impl</artifactId>
+		   <version>1.2.5</version>
+	    </dependency>
 
 	</dependencies>
 
