--- a/boardWeb/pom.xml
+++ b/boardWeb/pom.xml
@@ -59,7 +59,22 @@
 		   <artifactId>taglibs-standard-impl</artifactId>
 		   <version>1.2.5</version>
 	    </dependency>
-
+		<!--apache tiles-->
+		<dependency>
+		    <groupId>org.apache.tiles</groupId>
+		    <artifactId>tiles-extras</artifactId>
+		    <version>3.0.8</version>
+	    </dependency>
+	    <dependency>
+		    <groupId>org.apache.tiles</groupId>
+		    <artifactId>tiles-servlet</artifactId>
+		    <version>3.0.8</version>
+	    </dependency>
+	    <dependency>
+		    <groupId>org.apache.tiles</groupId>
+		    <artifactId>tiles-jsp</artifactId>
+		    <version>3.0.8</version>
+	    </dependency>
 	</dependencies>
 
 </project>
